Release 1.20.5-pre1 (snapshot)