@@ -1,321 +1,258 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Dynamic;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.OptionalInt;
+import com.mojang.serialization.Codec;
+import java.util.List;
+import java.util.function.IntFunction;
 import javax.annotation.Nullable;
 
-public class cga extends ceg implements btq<ix<cer>> {
-   protected static final ImmutableList<cdb<? extends cda<? super cga>>> bY = ImmutableList.of(cdb.c, cdb.f, cdb.v, cdb.s, cdb.w);
-   protected static final ImmutableList<cbu<?>> bZ = ImmutableList.of(
-      cbu.n, cbu.g, cbu.h, cbu.m, cbu.E, cbu.t, cbu.r, cbu.S, cbu.T, cbu.o, cbu.O, cbu.P, new cbu[]{cbu.R, cbu.x, cbu.y, cbu.B, cbu.X, cbu.Y, cbu.Z, cbu.aa}
+public class cga extends cez implements buk<cga.b> {
+   public static final String b = "BucketVariantTag";
+   private static final akg<Integer> d = akk.a(cga.class, aki.b);
+   public static final List<cga.d> c = List.of(
+      new cga.d(cga.b.h, ctd.b, ctd.h),
+      new cga.d(cga.b.g, ctd.h, ctd.h),
+      new cga.d(cga.b.g, ctd.h, ctd.l),
+      new cga.d(cga.b.l, ctd.a, ctd.h),
+      new cga.d(cga.b.b, ctd.l, ctd.h),
+      new cga.d(cga.b.a, ctd.b, ctd.a),
+      new cga.d(cga.b.f, ctd.g, ctd.d),
+      new cga.d(cga.b.j, ctd.k, ctd.e),
+      new cga.d(cga.b.l, ctd.a, ctd.o),
+      new cga.d(cga.b.f, ctd.a, ctd.e),
+      new cga.d(cga.b.i, ctd.a, ctd.h),
+      new cga.d(cga.b.l, ctd.a, ctd.b),
+      new cga.d(cga.b.d, ctd.j, ctd.g),
+      new cga.d(cga.b.e, ctd.f, ctd.d),
+      new cga.d(cga.b.k, ctd.o, ctd.a),
+      new cga.d(cga.b.c, ctd.h, ctd.o),
+      new cga.d(cga.b.j, ctd.o, ctd.a),
+      new cga.d(cga.b.g, ctd.a, ctd.e),
+      new cga.d(cga.b.a, ctd.o, ctd.a),
+      new cga.d(cga.b.b, ctd.h, ctd.a),
+      new cga.d(cga.b.d, ctd.j, ctd.e),
+      new cga.d(cga.b.g, ctd.e, ctd.e)
    );
-   private static final ajs<ix<cer>> cg = ajw.a(cga.class, aju.z);
-   private static final ajs<OptionalInt> ch = ajw.a(cga.class, aju.v);
-   private static final int ci = 5;
-   public static final String cb = "variant";
-   private static final akm<cer> cj = cer.a;
-   public final brr cc = new brr();
-   public final brr cd = new brr();
-   public final brr ce = new brr();
-   public final brr cf = new brr();
+   private boolean e = true;
 
-   public cga(bsc<? extends ceg> $$0, daz $$1) {
+   public cga(bsv<? extends cga> $$0, dbt $$1) {
       super($$0, $$1);
-      this.bO = new cga.a(this);
-      this.a(enn.j, 4.0F);
-      this.a(enn.e, -1.0F);
-      this.bP = new byt(this, 85, 10, 0.02F, 0.1F, true);
+   }
+
+   public static String c(int $$0) {
+      return "entity.minecraft.tropical_fish.predefined." + $$0;
+   }
+
+   static int a(cga.b $$0, ctd $$1, ctd $$2) {
+      return $$0.b() & 65535 | ($$1.a() & 0xFF) << 16 | ($$2.a() & 0xFF) << 24;
+   }
+
+   public static ctd t(int $$0) {
+      return ctd.a($$0 >> 16 & 0xFF);
+   }
+
+   public static ctd u(int $$0) {
+      return ctd.a($$0 >> 24 & 0xFF);
+   }
+
+   public static cga.b v(int $$0) {
+      return cga.b.a($$0 & 65535);
    }
 
    @Override
-   protected bts.b<cga> dT() {
-      return bts.a(bZ, bY);
-   }
-
-   @Override
-   protected bts<?> a(Dynamic<?> $$0) {
-      return cgb.a(this.dT().a($$0));
-   }
-
-   @Override
-   public bts<cga> dS() {
-      return (bts<cga>)super.dS();
-   }
-
-   @Override
-   protected void a(ajw.a $$0) {
+   protected void a(akk.a $$0) {
       super.a($$0);
-      $$0.a(cg, le.al.g(cj));
-      $$0.a(ch, OptionalInt.empty());
+      $$0.a(d, 0);
    }
 
    @Override
-   public void s() {
-      this.ao.a(ch, OptionalInt.empty());
-   }
-
-   public Optional<brw> u() {
-      return this.ao.a(ch).stream().mapToObj(this.dP()::a).filter(Objects::nonNull).findFirst();
-   }
-
-   @Override
-   public void b(brw $$0) {
-      this.ao.a(ch, OptionalInt.of($$0.al()));
-   }
-
-   @Override
-   public int ad() {
-      return 35;
-   }
-
-   @Override
-   public int aa() {
-      return 5;
-   }
-
-   public ix<cer> y() {
-      return this.ao.a(cg);
-   }
-
-   @Override
-   public void i(ix<cer> $$0) {
-      this.ao.a(cg, $$0);
-   }
-
-   @Override
-   public void b(ud $$0) {
+   public void b(ur $$0) {
       super.b($$0);
-      $$0.a("variant", this.y().e().orElse(cj).a().toString());
+      $$0.a("Variant", this.gC());
    }
 
    @Override
-   public void a(ud $$0) {
+   public void a(ur $$0) {
       super.a($$0);
-      Optional.ofNullable(akn.a($$0.l("variant"))).map($$0x -> akm.a(lf.B, $$0x)).flatMap(le.al::b).ifPresent(this::i);
+      this.w($$0.h("Variant"));
+   }
+
+   private void w(int $$0) {
+      this.ao.a(d, $$0);
    }
 
    @Override
-   protected void Y() {
-      this.dP().af().a("frogBrain");
-      this.dS().a((aqn)this.dP(), this);
-      this.dP().af().c();
-      this.dP().af().a("frogActivityUpdate");
-      cgb.a(this);
-      this.dP().af().c();
-      super.Y();
+   public boolean d(int $$0) {
+      return !this.e;
+   }
+
+   private int gC() {
+      return this.ao.a(d);
+   }
+
+   public ctd gz() {
+      return t(this.gC());
+   }
+
+   public ctd gA() {
+      return u(this.gC());
+   }
+
+   public cga.b gB() {
+      return v(this.gC());
+   }
+
+   public void a(cga.b $$0) {
+      int $$1 = this.gC();
+      ctd $$2 = t($$1);
+      ctd $$3 = u($$1);
+      this.w(a($$0, $$2, $$3));
    }
 
    @Override
-   public void l() {
-      if (this.dP().x_()) {
-         this.cf.a(this.bh() && !this.aU.c(), this.ai);
+   public void n(cuk $$0) {
+      super.n($$0);
+      cwz.a(km.M, $$0, $$0x -> $$0x.a("BucketVariantTag", this.gC()));
+   }
+
+   @Override
+   public cuk b() {
+      return new cuk(cun.qI);
+   }
+
+   @Override
+   protected avv v() {
+      return avw.zJ;
+   }
+
+   @Override
+   protected avv o_() {
+      return avw.zK;
+   }
+
+   @Override
+   protected avv d(bri $$0) {
+      return avw.zM;
+   }
+
+   @Override
+   protected avv gr() {
+      return avw.zL;
+   }
+
+   @Override
+   public void c(ur $$0) {
+      super.c($$0);
+      if ($$0.b("BucketVariantTag", 3)) {
+         this.w($$0.h("BucketVariantTag"));
       }
-
-      super.l();
    }
 
+   @Nullable
    @Override
-   public void a(ajs<?> $$0) {
-      if (at.equals($$0)) {
-         btc $$1 = this.ar();
-         if ($$1 == btc.g) {
-            this.cc.a(this.ai);
-         } else {
-            this.cc.a();
-         }
-
-         if ($$1 == btc.i) {
-            this.cd.a(this.ai);
-         } else {
-            this.cd.a();
-         }
-
-         if ($$1 == btc.j) {
-            this.ce.a(this.ai);
-         } else {
-            this.ce.a();
-         }
-      }
-
-      super.a($$0);
-   }
-
-   @Override
-   protected void x(float $$0) {
-      float $$1;
-      if (this.cc.c()) {
-         $$1 = 0.0F;
+   public bud a(dci $$0, bqn $$1, bto $$2, @Nullable bud $$3) {
+      $$3 = super.a($$0, $$1, $$2, $$3);
+      azc $$4 = $$0.E_();
+      cga.d $$6;
+      if ($$3 instanceof cga.c $$5) {
+         $$6 = $$5.b;
+      } else if ((double)$$4.i() < 0.9) {
+         $$6 = ac.a(c, $$4);
+         $$3 = new cga.c(this, $$6);
       } else {
-         $$1 = Math.min($$0 * 25.0F, 1.0F);
+         this.e = false;
+         cga.b[] $$8 = cga.b.values();
+         ctd[] $$9 = ctd.values();
+         cga.b $$10 = ac.a($$8, $$4);
+         ctd $$11 = ac.a($$9, $$4);
+         ctd $$12 = ac.a($$9, $$4);
+         $$6 = new cga.d($$10, $$11, $$12);
       }
 
-      this.aU.a($$1, 0.4F);
+      this.w($$6.a());
+      return $$3;
    }
 
-   @Nullable
-   @Override
-   public brq a(aqn $$0, brq $$1) {
-      cga $$2 = bsc.R.a((daz)$$0);
-      if ($$2 != null) {
-         cgb.a($$2, $$0.E_());
-      }
-
-      return $$2;
+   public static boolean b(bsv<cga> $$0, dbu $$1, bto $$2, iz $$3, azc $$4) {
+      return $$1.b_($$3.d()).a(awr.a) && $$1.a_($$3.c()).a(dew.G) && ($$1.t($$3).a(awk.an) || cgc.c($$0, $$1, $$2, $$3, $$4));
    }
 
-   @Override
-   public boolean p_() {
-      return false;
-   }
+   public static enum a {
+      a(0),
+      b(1);
 
-   @Override
-   public void a(boolean $$0) {
-   }
+      final int c;
 
-   @Override
-   public void a(aqn $$0, ceg $$1) {
-      this.a($$0, $$1, null);
-      this.dS().a(cbu.Y, azh.a);
-   }
-
-   @Override
-   public btj a(dbo $$0, bpu $$1, bsu $$2, @Nullable btj $$3) {
-      ix<dby> $$4 = $$0.t(this.dp());
-      if ($$4.a(avw.ai)) {
-         this.i(le.al.g(cer.c));
-      } else if ($$4.a(avw.aj)) {
-         this.i(le.al.g(cer.b));
-      } else {
-         this.i(le.al.g(cj));
-      }
-
-      cgb.a(this, $$0.E_());
-      return super.a($$0, $$1, $$2, $$3);
-   }
-
-   public static btx.a gp() {
-      return bss.A().a(bty.r, 1.0).a(bty.q, 10.0).a(bty.c, 10.0).a(bty.v, 1.0);
-   }
-
-   @Nullable
-   @Override
-   protected avh v() {
-      return avi.jL;
-   }
-
-   @Nullable
-   @Override
-   protected avh d(bqp $$0) {
-      return avi.jO;
-   }
-
-   @Nullable
-   @Override
-   protected avh o_() {
-      return avi.jM;
-   }
-
-   @Override
-   protected void b(io $$0, drd $$1) {
-      this.a(avi.jR, 0.15F, 1.0F);
-   }
-
-   @Override
-   public boolean cC() {
-      return false;
-   }
-
-   @Override
-   protected void X() {
-      super.X();
-      agb.a(this);
-   }
-
-   @Override
-   protected int d(float $$0, float $$1) {
-      return super.d($$0, $$1) - 5;
-   }
-
-   @Override
-   public void a(eum $$0) {
-      if (this.da() && this.be()) {
-         this.a(this.fn(), $$0);
-         this.a(bsv.a, this.ds());
-         this.g(this.ds().a(0.9));
-      } else {
-         super.a($$0);
+      private a(final int $$0) {
+         this.c = $$0;
       }
    }
 
-   public static boolean j(bsq $$0) {
-      if ($$0 instanceof cjn $$1 && $$1.gq() != 1) {
-         return false;
+   public static enum b implements azp {
+      a("kob", cga.a.a, 0),
+      b("sunstreak", cga.a.a, 1),
+      c("snooper", cga.a.a, 2),
+      d("dasher", cga.a.a, 3),
+      e("brinely", cga.a.a, 4),
+      f("spotty", cga.a.a, 5),
+      g("flopper", cga.a.b, 0),
+      h("stripey", cga.a.b, 1),
+      i("glitter", cga.a.b, 2),
+      j("blockfish", cga.a.b, 3),
+      k("betty", cga.a.b, 4),
+      l("clayfish", cga.a.b, 5);
+
+      public static final Codec<cga.b> m = azp.a(cga.b::values);
+      private static final IntFunction<cga.b> n = axl.a(cga.b::b, values(), a);
+      private final String o;
+      private final xl p;
+      private final cga.a q;
+      private final int r;
+
+      private b(final String $$0, final cga.a $$1, final int $$2) {
+         this.o = $$0;
+         this.q = $$1;
+         this.r = $$1.c | $$2 << 8;
+         this.p = xl.c("entity.minecraft.tropical_fish.type." + this.o);
       }
 
-      return $$0.ak().a(awa.n);
+      public static cga.b a(int $$0) {
+         return n.apply($$0);
+      }
+
+      public cga.a a() {
+         return this.q;
+      }
+
+      public int b() {
+         return this.r;
+      }
+
+      @Override
+      public String c() {
+         return this.o;
+      }
+
+      public xl d() {
+         return this.p;
+      }
    }
 
-   @Override
-   protected ccc b(daz $$0) {
-      return new cga.c(this, $$0);
-   }
+   static class c extends cez.a {
+      final cga.d b;
 
-   @Override
-   public boolean o(ctq $$0) {
-      return $$0.a(awf.al);
-   }
-
-   public static boolean c(bsc<? extends ceg> $$0, dba $$1, bsu $$2, io $$3, aym $$4) {
-      return $$1.a_($$3.d()).a(avx.cg) && a($$1, $$3);
-   }
-
-   class a extends byq {
-      a(bss $$0) {
+      c(cga $$0, cga.d $$1) {
          super($$0);
-      }
-
-      @Override
-      protected boolean c() {
-         return cga.this.u().isEmpty();
+         this.b = $$1;
       }
    }
 
-   static class b extends enf {
-      private final io.a l = new io.a();
+   public static record d(cga.b b, ctd c, ctd d) {
+      public static final Codec<cga.d> a = Codec.INT.xmap(cga.d::new, cga.d::a);
 
-      public b(boolean $$0) {
-         super($$0);
+      public d(int $$0) {
+         this(cga.v($$0), cga.t($$0), cga.u($$0));
       }
 
-      @Override
-      public eni a() {
-         return !this.b.be() ? super.a() : this.c(new io(ayf.a(this.b.cK().a), ayf.a(this.b.cK().b), ayf.a(this.b.cK().c)));
-      }
-
-      @Override
-      public enn a(enp $$0, int $$1, int $$2, int $$3) {
-         this.l.d($$1, $$2 - 1, $$3);
-         drd $$4 = $$0.a(this.l);
-         return $$4.a(avx.bR) ? enn.b : super.a($$0, $$1, $$2, $$3);
-      }
-   }
-
-   static class c extends cbz {
-      c(cga $$0, daz $$1) {
-         super($$0, $$1);
-      }
-
-      @Override
-      public boolean b(enn $$0) {
-         return $$0 != enn.k && super.b($$0);
-      }
-
-      @Override
-      protected enm a(int $$0) {
-         this.o = new cga.b(true);
-         this.o.a(true);
-         return new enm(this.o, $$0);
+      public int a() {
+         return cga.a(this.b, this.c, this.d);
       }
    }
 }
