@@ -1,485 +1,171 @@
 import com.google.common.collect.ImmutableList;
-import java.util.List;
+import com.mojang.datafixers.util.Pair;
 
 public class qw {
-   private static final akm<elj> M = a("empty");
-   public static final akm<elj> a = a("zombie_plains");
-   public static final akm<elj> b = a("zombie_savanna");
-   public static final akm<elj> c = a("zombie_snowy");
-   public static final akm<elj> d = a("zombie_taiga");
-   public static final akm<elj> e = a("zombie_desert");
-   public static final akm<elj> f = a("mossify_10_percent");
-   public static final akm<elj> g = a("mossify_20_percent");
-   public static final akm<elj> h = a("mossify_70_percent");
-   public static final akm<elj> i = a("street_plains");
-   public static final akm<elj> j = a("street_savanna");
-   public static final akm<elj> k = a("street_snowy_or_taiga");
-   public static final akm<elj> l = a("farm_plains");
-   public static final akm<elj> m = a("farm_savanna");
-   public static final akm<elj> n = a("farm_snowy");
-   public static final akm<elj> o = a("farm_taiga");
-   public static final akm<elj> p = a("farm_desert");
-   public static final akm<elj> q = a("outpost_rot");
-   public static final akm<elj> r = a("bottom_rampart");
-   public static final akm<elj> s = a("treasure_rooms");
-   public static final akm<elj> t = a("housing");
-   public static final akm<elj> u = a("side_wall_degradation");
-   public static final akm<elj> v = a("stable_degradation");
-   public static final akm<elj> w = a("bastion_generic_degradation");
-   public static final akm<elj> x = a("rampart_degradation");
-   public static final akm<elj> y = a("entrance_replacement");
-   public static final akm<elj> z = a("bridge");
-   public static final akm<elj> A = a("roof");
-   public static final akm<elj> B = a("high_wall");
-   public static final akm<elj> C = a("high_rampart");
-   public static final akm<elj> D = a("fossil_rot");
-   public static final akm<elj> E = a("fossil_coal");
-   public static final akm<elj> F = a("fossil_diamonds");
-   public static final akm<elj> G = a("ancient_city_start_degradation");
-   public static final akm<elj> H = a("ancient_city_generic_degradation");
-   public static final akm<elj> I = a("ancient_city_walls_degradation");
-   public static final akm<elj> J = a("trail_ruins_houses_archaeology");
-   public static final akm<elj> K = a("trail_ruins_roads_archaeology");
-   public static final akm<elj> L = a("trail_ruins_tower_top_archaeology");
-
-   private static akm<elj> a(String $$0) {
-      return akm.a(lf.aK, new akn($$0));
-   }
-
-   private static void a(qo<elj> $$0, akm<elj> $$1, List<eli> $$2) {
-      $$0.a($$1, new elj($$2));
-   }
-
-   public static void a(qo<elj> $$0) {
-      iy<dea> $$1 = $$0.a(lf.f);
-      ela $$2 = new ela(new elc(dec.pr, 0.01F), ekj.b, dec.pC.n());
-      ela $$3 = new ela(new elc(dec.pC, 0.5F), ekj.b, dec.pr.n());
-      a($$0, M, ImmutableList.of());
-      a(
+   public static void a(rc<ejo> $$0) {
+      jj<emd> $$1 = $$0.a(lq.aK);
+      ji<emd> $$2 = $$1.b(rk.v);
+      ji<emd> $$3 = $$1.b(rk.u);
+      jj<ejo> $$4 = $$0.a(lq.aM);
+      ji<ejo> $$5 = $$4.b(rj.a);
+      rj.a(
          $$0,
-         a,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.m, 0.8F), ekj.b, dec.cn.n()),
-                  new ela(new eln(avx.p), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cp), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cq), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.m, 0.07F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.cn, 0.07F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.hj, 0.07F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.U, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.n, 0.1F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.cu, 0.1F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.al, 0.02F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.eY, 0.5F), ekj.b, dec.bs.n()),
-                  new ela[]{
-                     new ela(
-                        new ekq(dec.eY.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))),
-                        ekj.b,
-                        dec.hL.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))
-                     ),
-                     new ela(
-                        new ekq(dec.eY.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))),
-                        ekj.b,
-                        dec.hL.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))
-                     ),
-                     new ela(new elc(dec.cB, 0.3F), ekj.b, dec.gt.n()),
-                     new ela(new elc(dec.cB, 0.2F), ekj.b, dec.gu.n()),
-                     new ela(new elc(dec.cB, 0.1F), ekj.b, dec.kD.n())
-                  }
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         b,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eln(avx.p), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cp), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cq), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.r, 0.2F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.hP, 0.2F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.Y, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.as, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.hk, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.hn, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.hx, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.eY, 0.5F), ekj.b, dec.bs.n()),
-                  new ela(
-                     new ekq(dec.eY.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))),
-                     ekj.b,
-                     dec.hL.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))
-                  ),
-                  new ela[]{
-                     new ela(
-                        new ekq(dec.eY.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))),
-                        ekj.b,
-                        dec.hL.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))
-                     ),
-                     new ela(new elc(dec.cB, 0.1F), ekj.b, dec.fe.n())
-                  }
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         c,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eln(avx.p), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cp), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cq), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.oe), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.o, 0.2F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.ju, 0.4F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.af, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.ax, 0.05F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.eY, 0.5F), ekj.b, dec.bs.n()),
-                  new ela(
-                     new ekq(dec.eY.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))),
-                     ekj.b,
-                     dec.hL.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))
-                  ),
-                  new ela(
-                     new ekq(dec.eY.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))),
-                     ekj.b,
-                     dec.hL.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))
-                  ),
-                  new ela(new elc(dec.cB, 0.1F), ekj.b, dec.gt.n()),
-                  new ela[]{new ela(new elc(dec.cB, 0.8F), ekj.b, dec.gu.n())}
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         d,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.m, 0.8F), ekj.b, dec.cn.n()),
-                  new ela(new eln(avx.p), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cp), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cq), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.og), ekj.b, dec.og.n().a(deo.c, Boolean.valueOf(false))),
-                  new ela(new elc(dec.m, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.V, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.eY, 0.5F), ekj.b, dec.bs.n()),
-                  new ela(
-                     new ekq(dec.eY.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))),
-                     ekj.b,
-                     dec.hL.n().a(dib.a, Boolean.valueOf(true)).a(dib.c, Boolean.valueOf(true))
-                  ),
-                  new ela(
-                     new ekq(dec.eY.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))),
-                     ekj.b,
-                     dec.hL.n().a(dib.b, Boolean.valueOf(true)).a(dib.d, Boolean.valueOf(true))
-                  ),
-                  new ela(new elc(dec.cB, 0.3F), ekj.b, dec.fd.n()),
-                  new ela(new elc(dec.cB, 0.2F), ekj.b, dec.gu.n()),
-                  new ela[0]
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         e,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eln(avx.p), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cp), ekj.b, dec.a.n()),
-                  new ela(new eko(dec.cq), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.jS, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.aX, 0.1F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.iA, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.nl, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.ny, 0.08F), ekj.b, dec.bs.n()),
-                  new ela(new elc(dec.cB, 0.2F), ekj.b, dec.kD.n()),
-                  new ela(new elc(dec.cB, 0.1F), ekj.b, dec.fe.n())
-               )
-            )
-         )
-      );
-      a($$0, f, ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.m, 0.1F), ekj.b, dec.cn.n())))));
-      a($$0, g, ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.m, 0.2F), ekj.b, dec.cn.n())))));
-      a($$0, h, ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.m, 0.7F), ekj.b, dec.cn.n())))));
-      a(
-         $$0,
-         i,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eko(dec.kE), new eko(dec.G), dec.n.n()),
-                  new ela(new elc(dec.kE, 0.1F), ekj.b, dec.i.n()),
-                  new ela(new eko(dec.i), new eko(dec.G), dec.G.n()),
-                  new ela(new eko(dec.j), new eko(dec.G), dec.G.n())
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         j,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eko(dec.kE), new eko(dec.G), dec.r.n()),
-                  new ela(new elc(dec.kE, 0.2F), ekj.b, dec.i.n()),
-                  new ela(new eko(dec.i), new eko(dec.G), dec.G.n()),
-                  new ela(new eko(dec.j), new eko(dec.G), dec.G.n())
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         k,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new eko(dec.kE), new eko(dec.G), dec.o.n()),
-                  new ela(new eko(dec.kE), new eko(dec.dO), dec.o.n()),
-                  new ela(new elc(dec.kE, 0.2F), ekj.b, dec.i.n()),
-                  new ela(new eko(dec.i), new eko(dec.G), dec.G.n()),
-                  new ela(new eko(dec.j), new eko(dec.G), dec.G.n())
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         l,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.cB, 0.3F), ekj.b, dec.gt.n()),
-                  new ela(new elc(dec.cB, 0.2F), ekj.b, dec.gu.n()),
-                  new ela(new elc(dec.cB, 0.1F), ekj.b, dec.kD.n())
-               )
-            )
-         )
-      );
-      a($$0, m, ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.cB, 0.1F), ekj.b, dec.fe.n())))));
-      a(
-         $$0,
-         n,
-         ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.cB, 0.1F), ekj.b, dec.gt.n()), new ela(new elc(dec.cB, 0.8F), ekj.b, dec.gu.n()))))
-      );
-      a(
-         $$0,
-         o,
-         ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.cB, 0.3F), ekj.b, dec.fd.n()), new ela(new elc(dec.cB, 0.2F), ekj.b, dec.gu.n()))))
-      );
-      a(
-         $$0,
-         p,
-         ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.cB, 0.2F), ekj.b, dec.kD.n()), new ela(new elc(dec.cB, 0.1F), ekj.b, dec.fe.n()))))
-      );
-      a($$0, q, ImmutableList.of(new ekp(0.05F)));
-      a(
-         $$0,
-         r,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.kJ, 0.75F), ekj.b, dec.px.n()), new ela(new elc(dec.px, 0.15F), ekj.b, dec.pw.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         s,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.pw, 0.35F), ekj.b, dec.px.n()), new ela(new elc(dec.py, 0.1F), ekj.b, dec.px.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         t,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.pw, 0.3F), ekj.b, dec.px.n()), new ela(new elc(dec.pr, 1.0E-4F), ekj.b, dec.a.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         u,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.py, 0.5F), ekj.b, dec.a.n()), new ela(new elc(dec.ch, 0.1F), ekj.b, dec.px.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         v,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.pw, 0.1F), ekj.b, dec.px.n()), new ela(new elc(dec.pr, 1.0E-4F), ekj.b, dec.a.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         w,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.pw, 0.3F), ekj.b, dec.px.n()),
-                  new ela(new elc(dec.pr, 1.0E-4F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.ch, 0.3F), ekj.b, dec.px.n()),
-                  $$3,
-                  $$2
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         x,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.pw, 0.4F), ekj.b, dec.px.n()),
-                  new ela(new elc(dec.pr, 0.01F), ekj.b, dec.px.n()),
-                  new ela(new elc(dec.pw, 1.0E-4F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.pr, 1.0E-4F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.ch, 0.3F), ekj.b, dec.px.n()),
-                  $$3,
-                  $$2
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         y,
-         ImmutableList.of(
-            new ele(ImmutableList.of(new ela(new elc(dec.py, 0.5F), ekj.b, dec.a.n()), new ela(new elc(dec.ch, 0.6F), ekj.b, dec.px.n()), $$3, $$2))
-         )
-      );
-      a(
-         $$0,
-         z,
-         ImmutableList.of(new ele(ImmutableList.of(new ela(new elc(dec.pw, 0.3F), ekj.b, dec.px.n()), new ela(new elc(dec.pr, 1.0E-4F), ekj.b, dec.a.n()))))
-      );
-      a(
-         $$0,
-         A,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.pw, 0.3F), ekj.b, dec.px.n()),
-                  new ela(new elc(dec.pw, 0.15F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.pw, 0.3F), ekj.b, dec.pr.n())
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         B,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.pw, 0.01F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.pw, 0.5F), ekj.b, dec.px.n()),
-                  new ela(new elc(dec.pw, 0.3F), ekj.b, dec.pr.n()),
-                  $$3
-               )
-            )
-         )
-      );
-      a(
-         $$0,
-         C,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(new ela(new elc(dec.ch, 0.3F), ekj.b, dec.px.n()), new ela(ekj.b, ekj.b, new ekk(0.0F, 0.05F, 0, 100, it.a.b), dec.a.n()), $$3)
-            )
-         )
-      );
-      a($$0, D, ImmutableList.of(new ekp(0.9F), new elb(avx.bO)));
-      a($$0, E, ImmutableList.of(new ekp(0.1F), new elb(avx.bO)));
-      a($$0, F, ImmutableList.of(new ekp(0.1F), new ele(ImmutableList.of(new ela(new eko(dec.R), ekj.b, dec.cy.n()))), new elb(avx.bO)));
-      a(
-         $$0,
-         G,
-         ImmutableList.of(
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.sW, 0.3F), ekj.b, dec.tb.n()),
-                  new ela(new elc(dec.sS, 0.3F), ekj.b, dec.tc.n()),
-                  new ela(new elc(dec.of, 0.05F), ekj.b, dec.a.n())
-               )
+         "bastion/hoglin_stable/starting_pieces",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/starting_stairs_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/starting_stairs_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/starting_stairs_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/starting_stairs_3", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/starting_stairs_4", $$2), 1)
             ),
-            new elb(avx.bO)
+            ejo.a.b
          )
       );
-      a(
+      rj.a(
          $$0,
-         H,
-         ImmutableList.of(
-            new ekp($$1.b(avx.bU), 0.95F),
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.sW, 0.3F), ekj.b, dec.tb.n()),
-                  new ela(new elc(dec.sS, 0.3F), ekj.b, dec.tc.n()),
-                  new ela(new elc(dec.of, 0.05F), ekj.b, dec.a.n())
-               )
+         "bastion/hoglin_stable/mirrored_starting_pieces",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/stairs_0_mirrored", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/stairs_1_mirrored", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/stairs_2_mirrored", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/stairs_3_mirrored", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/starting_pieces/stairs_4_mirrored", $$2), 1)
             ),
-            new elb(avx.bO)
+            ejo.a.b
          )
       );
-      a(
+      rj.a($$0, "bastion/hoglin_stable/wall_bases", new ejo($$5, ImmutableList.of(Pair.of(ejm.b("bastion/hoglin_stable/walls/wall_base", $$2), 1)), ejo.a.b));
+      rj.a(
          $$0,
-         I,
-         ImmutableList.of(
-            new ekp($$1.b(avx.bU), 0.95F),
-            new ele(
-               ImmutableList.of(
-                  new ela(new elc(dec.sW, 0.3F), ekj.b, dec.tb.n()),
-                  new ela(new elc(dec.sS, 0.3F), ekj.b, dec.tc.n()),
-                  new ela(new elc(dec.sU, 0.3F), ekj.b, dec.a.n()),
-                  new ela(new elc(dec.of, 0.05F), ekj.b, dec.a.n())
-               )
+         "bastion/hoglin_stable/walls",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/walls/side_wall_0", $$3), 1), Pair.of(ejm.b("bastion/hoglin_stable/walls/side_wall_1", $$3), 1)
             ),
-            new elb(avx.bO)
+            ejo.a.b
          )
       );
-      a(
+      rj.a(
          $$0,
-         J,
-         List.of(
-            new ele(
-               List.of(
-                  new ela(new elc(dec.L, 0.2F), ekj.b, dec.j.n()),
-                  new ela(new elc(dec.L, 0.1F), ekj.b, dec.k.n()),
-                  new ela(new elc(dec.eM, 0.1F), ekj.b, dec.eL.n())
-               )
+         "bastion/hoglin_stable/stairs",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_1_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_1_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_1_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_1_3", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_1_4", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_2_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_2_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_2_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_2_3", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_2_4", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_3_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_3_1", $$2), 1),
+               new Pair[]{
+                  Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_3_2", $$2), 1),
+                  Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_3_3", $$2), 1),
+                  Pair.of(ejm.b("bastion/hoglin_stable/stairs/stairs_3_4", $$2), 1)
+               }
             ),
-            a(epf.bd, 6),
-            a(epf.be, 3)
+            ejo.a.b
          )
       );
-      a(
+      rj.a(
          $$0,
-         K,
-         List.of(
-            new ele(
-               List.of(
-                  new ela(new elc(dec.L, 0.2F), ekj.b, dec.j.n()),
-                  new ela(new elc(dec.L, 0.1F), ekj.b, dec.k.n()),
-                  new ela(new elc(dec.eM, 0.1F), ekj.b, dec.eL.n())
-               )
+         "bastion/hoglin_stable/small_stables/inner",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/inner_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/inner_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/inner_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/inner_3", $$2), 1)
             ),
-            a(epf.bd, 2)
+            ejo.a.b
          )
       );
-      a($$0, L, List.of(a(epf.bd, 2)));
-   }
-
-   private static ekr a(akm<epm> $$0, int $$1) {
-      return new ekr(new ele(List.of(new ela(new eln(avx.ct), ekj.b, ekx.b, dec.M.n(), new elp($$0)))), boy.a($$1));
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/small_stables/outer",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/outer_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/outer_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/outer_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/small_stables/outer_3", $$2), 1)
+            ),
+            ejo.a.b
+         )
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/large_stables/inner",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/inner_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/inner_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/inner_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/inner_3", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/inner_4", $$2), 1)
+            ),
+            ejo.a.b
+         )
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/large_stables/outer",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/outer_0", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/outer_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/outer_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/outer_3", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/large_stables/outer_4", $$2), 1)
+            ),
+            ejo.a.b
+         )
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/posts",
+         new ejo(
+            $$5,
+            ImmutableList.of(Pair.of(ejm.b("bastion/hoglin_stable/posts/stair_post", $$2), 1), Pair.of(ejm.b("bastion/hoglin_stable/posts/end_post", $$2), 1)),
+            ejo.a.b
+         )
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/ramparts",
+         new ejo(
+            $$5,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/hoglin_stable/ramparts/ramparts_1", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/ramparts/ramparts_2", $$2), 1),
+               Pair.of(ejm.b("bastion/hoglin_stable/ramparts/ramparts_3", $$2), 1)
+            ),
+            ejo.a.b
+         )
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/rampart_plates",
+         new ejo($$5, ImmutableList.of(Pair.of(ejm.b("bastion/hoglin_stable/rampart_plates/rampart_plate_1", $$2), 1)), ejo.a.b)
+      );
+      rj.a(
+         $$0,
+         "bastion/hoglin_stable/connectors",
+         new ejo($$5, ImmutableList.of(Pair.of(ejm.b("bastion/hoglin_stable/connectors/end_post_connector", $$2), 1)), ejo.a.b)
+      );
    }
 }
