@@ -1,47 +1,42 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface qz {
-   static void a(qo<ehr> $$0) {
-      iy<ehl> $$1 = $$0.a(lf.aJ);
-      iy<dby> $$2 = $$0.a(lf.az);
-      ix.c<ehr> $$3 = $$0.a(
-         ehe.a,
-         new ehr(
-            List.of(ehr.a($$1.b(ehf.t)), ehr.a($$1.b(ehf.u)), ehr.a($$1.b(ehf.v)), ehr.a($$1.b(ehf.w)), ehr.a($$1.b(ehf.x))), new eig(34, 8, eih.a, 10387312)
-         )
-      );
-      $$0.a(ehe.b, new ehr($$1.b(ehf.f), new eig(32, 8, eih.a, 14357617)));
-      $$0.a(ehe.c, new ehr($$1.b(ehf.g), new eig(32, 8, eih.a, 14357618)));
-      $$0.a(ehe.d, new ehr($$1.b(ehf.e), new eig(32, 8, eih.a, 14357619)));
-      $$0.a(ehe.e, new ehr($$1.b(ehf.j), new eig(32, 8, eih.a, 14357620)));
-      $$0.a(ehe.f, new ehr($$1.b(ehf.a), new eig(js.g, eii.c.b, 0.2F, 165745296, Optional.of(new eii.a($$3, 10)), 32, 8, eih.a)));
-      $$0.a(ehe.q, new ehr($$1.b(ehf.F), new eig(24, 8, eih.a, 20083232)));
-      $$0.a(ehe.g, new ehr($$1.b(ehf.l), new eig(32, 5, eih.b, 10387313)));
-      $$0.a(ehe.h, new ehr($$1.b(ehf.d), new eig(80, 20, eih.b, 10387319)));
-      $$0.a(ehe.i, new ehr($$1.b(ehf.r), new eig(new js(9, 0, 9), eii.c.c, 0.01F, 0, Optional.empty(), 1, 0, eih.a)));
-      $$0.a(ehe.j, new ehr(List.of(ehr.a($$1.b(ehf.b)), ehr.a($$1.b(ehf.c))), new eig(js.g, eii.c.d, 0.004F, 0, Optional.empty(), 1, 0, eih.a)));
-      $$0.a(
-         ehe.k,
-         new ehr(
-            List.of(
-               ehr.a($$1.b(ehf.y)),
-               ehr.a($$1.b(ehf.z)),
-               ehr.a($$1.b(ehf.A)),
-               ehr.a($$1.b(ehf.B)),
-               ehr.a($$1.b(ehf.C)),
-               ehr.a($$1.b(ehf.D)),
-               ehr.a($$1.b(ehf.E))
+public class qz {
+   public static void a(rc<ejo> $$0) {
+      jj<ejo> $$1 = $$0.a(lq.aM);
+      ji<ejo> $$2 = $$1.b(rj.a);
+      rj.a(
+         $$0,
+         "bastion/mobs/piglin",
+         new ejo(
+            $$2,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/mobs/melee_piglin"), 1),
+               Pair.of(ejm.b("bastion/mobs/sword_piglin"), 4),
+               Pair.of(ejm.b("bastion/mobs/crossbow_piglin"), 4),
+               Pair.of(ejm.b("bastion/mobs/empty"), 1)
             ),
-            new eig(40, 15, eih.a, 34222645)
+            ejo.a.b
          )
       );
-      $$0.a(ehe.l, new ehr(List.of(ehr.a($$1.b(ehf.h)), ehr.a($$1.b(ehf.i))), new eig(24, 4, eih.a, 165745295)));
-      $$0.a(ehe.m, new ehr(List.of(ehr.a($$1.b(ehf.m)), ehr.a($$1.b(ehf.n))), new eig(20, 8, eih.a, 14357621)));
-      $$0.a(ehe.n, new ehr(List.of(ehr.a($$1.b(ehf.o), 2), ehr.a($$1.b(ehf.s), 3)), new eig(27, 4, eih.a, 30084232)));
-      $$0.a(ehe.o, new ehr($$1.b(ehf.p), new eig(2, 1, eih.a, 14357921)));
-      $$0.a(ehe.p, new ehr($$1.b(ehf.q), new eig(20, 11, eih.b, 10387313)));
-      $$0.a(ehe.r, new ehr($$1.b(ehf.k), new eif(32, 3, 128, $$2.b(avw.o))));
-      $$0.a(ehe.s, new ehr($$1.b(ehf.G), new eig(34, 8, eih.a, 83469867)));
+      rj.a(
+         $$0, "bastion/mobs/hoglin", new ejo($$2, ImmutableList.of(Pair.of(ejm.b("bastion/mobs/hoglin"), 2), Pair.of(ejm.b("bastion/mobs/empty"), 1)), ejo.a.b)
+      );
+      rj.a(
+         $$0, "bastion/blocks/gold", new ejo($$2, ImmutableList.of(Pair.of(ejm.b("bastion/blocks/air"), 3), Pair.of(ejm.b("bastion/blocks/gold"), 1)), ejo.a.b)
+      );
+      rj.a(
+         $$0,
+         "bastion/mobs/piglin_melee",
+         new ejo(
+            $$2,
+            ImmutableList.of(
+               Pair.of(ejm.b("bastion/mobs/melee_piglin_always"), 1),
+               Pair.of(ejm.b("bastion/mobs/melee_piglin"), 5),
+               Pair.of(ejm.b("bastion/mobs/sword_piglin"), 1)
+            ),
+            ejo.a.b
+         )
+      );
    }
 }
