@@ -1,67 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class sg {
-   public static final akm<egp> a = si.a("delta");
-   public static final akm<egp> b = si.a("small_basalt_columns");
-   public static final akm<egp> c = si.a("large_basalt_columns");
-   public static final akm<egp> d = si.a("basalt_blobs");
-   public static final akm<egp> e = si.a("blackstone_blobs");
-   public static final akm<egp> f = si.a("glowstone_extra");
-   public static final akm<egp> g = si.a("glowstone");
-   public static final akm<egp> h = si.a("crimson_forest_vegetation");
-   public static final akm<egp> i = si.a("warped_forest_vegetation");
-   public static final akm<egp> j = si.a("nether_sprouts");
-   public static final akm<egp> k = si.a("twisting_vines");
-   public static final akm<egp> l = si.a("weeping_vines");
-   public static final akm<egp> m = si.a("patch_crimson_roots");
-   public static final akm<egp> n = si.a("basalt_pillar");
-   public static final akm<egp> o = si.a("spring_delta");
-   public static final akm<egp> p = si.a("spring_closed");
-   public static final akm<egp> q = si.a("spring_closed_double");
-   public static final akm<egp> r = si.a("spring_open");
-   public static final akm<egp> s = si.a("patch_soul_fire");
-   public static final akm<egp> t = si.a("patch_fire");
+   public static final ala<eag<?, ?>> a = sh.a("end_spike");
+   public static final ala<eag<?, ?>> b = sh.a("end_gateway_return");
+   public static final ala<eag<?, ?>> c = sh.a("end_gateway_delayed");
+   public static final ala<eag<?, ?>> d = sh.a("chorus_plant");
+   public static final ala<eag<?, ?>> e = sh.a("end_island");
 
-   public static void a(qo<egp> $$0) {
-      iy<dzm<?, ?>> $$1 = $$0.a(lf.aC);
-      ix<dzm<?, ?>> $$2 = $$1.b(rv.a);
-      ix<dzm<?, ?>> $$3 = $$1.b(rv.b);
-      ix<dzm<?, ?>> $$4 = $$1.b(rv.c);
-      ix<dzm<?, ?>> $$5 = $$1.b(rv.d);
-      ix<dzm<?, ?>> $$6 = $$1.b(rv.e);
-      ix<dzm<?, ?>> $$7 = $$1.b(rv.f);
-      ix<dzm<?, ?>> $$8 = $$1.b(rv.g);
-      ix<dzm<?, ?>> $$9 = $$1.b(rv.i);
-      ix<dzm<?, ?>> $$10 = $$1.b(rv.k);
-      ix<dzm<?, ?>> $$11 = $$1.b(rv.m);
-      ix<dzm<?, ?>> $$12 = $$1.b(rv.o);
-      ix<dzm<?, ?>> $$13 = $$1.b(rv.p);
-      ix<dzm<?, ?>> $$14 = $$1.b(rv.q);
-      ix<dzm<?, ?>> $$15 = $$1.b(rv.r);
-      ix<dzm<?, ?>> $$16 = $$1.b(rv.s);
-      ix<dzm<?, ?>> $$17 = $$1.b(rv.t);
-      ix<dzm<?, ?>> $$18 = $$1.b(rv.v);
-      ix<dzm<?, ?>> $$19 = $$1.b(rv.u);
-      si.a($$0, a, $$2, egh.a(40), egd.a());
-      si.a($$0, b, $$3, egh.a(4), egd.a());
-      si.a($$0, c, $$4, egh.a(2), egd.a());
-      si.a($$0, d, $$5, egi.a(75), egm.a(), si.e, egd.a());
-      si.a($$0, e, $$6, egi.a(25), egm.a(), si.e, egd.a());
-      si.a($$0, f, $$7, egi.a(bot.a(0, 9)), egm.a(), si.h, egd.a());
-      si.a($$0, g, $$7, egi.a(10), egm.a(), si.e, egd.a());
-      si.a($$0, h, $$8, egh.a(6), egd.a());
-      si.a($$0, i, $$9, egh.a(5), egd.a());
-      si.a($$0, j, $$10, egh.a(4), egd.a());
-      si.a($$0, k, $$11, egi.a(10), egm.a(), si.e, egd.a());
-      si.a($$0, l, $$12, egi.a(10), egm.a(), si.e, egd.a());
-      si.a($$0, m, $$13, si.e, egd.a());
-      si.a($$0, n, $$14, egi.a(10), egm.a(), si.e, egd.a());
-      si.a($$0, o, $$15, egi.a(16), egm.a(), si.h, egd.a());
-      si.a($$0, p, $$16, egi.a(16), egm.a(), si.f, egd.a());
-      si.a($$0, q, $$16, egi.a(32), egm.a(), si.f, egd.a());
-      si.a($$0, r, $$17, egi.a(8), egm.a(), si.h, egd.a());
-      List<egs> $$20 = List.of(egi.a(bph.a(0, 5)), egm.a(), si.h, egd.a());
-      si.a($$0, s, $$18, $$20);
-      si.a($$0, t, $$19, $$20);
+   public static void a(rc<eag<?, ?>> $$0) {
+      sh.a($$0, a, eat.J, new edr(false, ImmutableList.of(), null));
+      sh.a($$0, b, eat.L, ecw.a(arb.a, true));
+      sh.a($$0, c, eat.L, ecw.a());
+      sh.a($$0, d, eat.l);
+      sh.a($$0, e, eat.K);
    }
 }
